fdo#77506: More reliable way to determine label strings.

Not beautiful, but doable.

Change-Id: I6f3b00d620e7d7d19cc05ec4239deeb14d0d5201